--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="p:domain_verify" content="6f6284d0d2c791735047d97d20f38c2e"/>
     <!-- Updated viewport for Android friendliness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Derrick Machogu | Data Analyst</title>
@@ -61,18 +62,14 @@
                 --close-button-color: #ccc;
                 --mobile-menu-bg: rgba(17, 17, 17, 0.98);
 
-                /* New variables for light blue skills in dark mode */
-                --dm-skill-bg-dark: #ADD8E6; /* Light Blue for skill background */
-                --dm-skill-text-dark: #2c3e50; /* Dark blue-grey for text/icons on light blue */
+                /* New variables for dark green skills in dark mode */
+                --dm-skill-bg-dark: #14532d; /* Dark green for skill background */
                 --skill-bg: var(--dm-skill-bg-dark);
             }
 
             /* Apply new variables to skill elements in dark mode */
             .skill {
                 background: var(--dm-skill-bg-dark);
-            }
-            .skill i {
-                color: var(--dm-skill-text-dark);
             }
             .skill h3 {
                 color: var(--dm-skill-text-dark);
@@ -907,6 +904,9 @@
                 });
             }
         });
+    </script>
+</body>
+</html>
     </script>
 </body>
 </html>
